--- a/index.html
+++ b/index.html
@@ -3,46 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Camera Access</title>
+    <title>Camera Access Test</title>
 </head>
 <body>
-    <button id="startScanBtn">Start Scan</button>
-    <div id="scanner-container" style="display:none;">
-        <video id="barcode-scanner"></video>
-    </div>
+    <h1>Camera Access Test</h1>
+    <video id="video" width="640" height="480" autoplay></video>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/quagga/0.12.1/quagga.min.js"></script>
     <script>
-    document.addEventListener('DOMContentLoaded', () => {
-        const videoElement = document.getElementById('barcode-scanner');
-        const startScanBtn = document.getElementById('startScanBtn');
-        const scannerContainer = document.getElementById('scanner-container');
-        const canvas = document.createElement('canvas');
-        const context = canvas.getContext('2d', { willReadFrequently: true });
+        document.addEventListener('DOMContentLoaded', () => {
+            const video = document.getElementById('video');
 
-        startScanBtn.addEventListener('click', () => {
-            Quagga.init({
-                inputStream: {
-                    type: "LiveStream",
-                    target: videoElement,
-                    constraints: {
-                        facingMode: "environment" // Use the back camera
-                    }
-                },
-                decoder: {
-                    readers: ["code_128_reader", "ean_reader", "ean_8_reader"]
-                }
-            }, (err) => {
-                if (err) {
-                    console.error("Error initializing QuaggaJS:", err);
-                    return;
-                }
-                Quagga.start();
-                startScanBtn.style.display = 'none';
-                scannerContainer.style.display = 'block';
-            });
+            if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
+                navigator.mediaDevices.getUserMedia({ video: true })
+                    .then(stream => {
+                        video.srcObject = stream;
+                        video.play();
+                    })
+                    .catch(err => {
+                        console.error("Error accessing camera: ", err);
+                    });
+            } else {
+                console.error("getUserMedia not supported in this browser.");
+            }
         });
-    });
     </script>
 </body>
 </html>
